crates/reinhardt-grpc/macros/tests/ui/inject/fail/unrecognized_option.stderr
error: unrecognized `inject` option `opitonal`. Valid options: `cache`
  --> tests/ui/inject/fail/unrecognized_option.rs:12:11
   |
12 |     #[inject(opitonal = true)] service: String,
   |              ^^^^^^^^
